--- a/infra/gunicorn_kittygram.service
+++ b/infra/gunicorn_kittygram.service
@@ -1,11 +1,14 @@
 [Unit]
-Description=gunicorn kittygram daemon
+Description=gunicorn daemon
+
 After=network.target
 
 [Service]
 User=yc-user
+
 WorkingDirectory=/home/yc-user/infra_sprint1/backend/
-ExecStart=/home/yc-user/infra_sprint1/venv/bin/gunicorn --bind 0.0.0.0:8080 kittygram_backend.wsgi:application
+
+ExecStart=/home/yc-user/infra_sprint1/backend/venv/bin/gunicorn --bind 0.0.0.0:8080 kittygram_backend.wsgi:application
 
 [Install]
 WantedBy=multi-user.target
